# OpenLakeTx

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  design-decisions.md  platform-development-plan.md  pr-checklist.md  ssh-static-ip-troubleshooting.md
docs/control-plane/: metadata-model.md  overview.md  policy-enforcement.md  promotion-gates-states.md  quality-rules.md
docs/phase-1/: log.md  storage.md
lakeguard/contracts/: health_contract.py  lineage_contract.py  rule_contract.py  validation_contract.py
openlaketx/: log.py  storage.py  storage_base.py  storage_manager.py
openlaketx/contracts/: log_store_contract.py  schema_contract.py  snapshot_contract.py  transaction_contract.py
