[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openlaketx"
version = "0.1.0"
description = "A minimal Delta Lake-style transactional data lake built in Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
    {name = "Chirag Venkateshaiah}
]

keywords = [
    "data-lake",
    "delta-lake",
    "transaction-log",
    "parquet",
    "data-engineering"
]


classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "gcsfs>=2023.8.0",
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy"
]

[project.scripts]
openlaketx = "cli.main:app"

[tool.setuptools]
packages = ["openlaketx", "cli"]

[tools.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.black]
line-length = 88
select = ["py310]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true